--- a/student_app/templates/student_app/index.html
+++ b/student_app/templates/student_app/index.html
@@ -9,6 +9,7 @@
         <div class="container h-100">
             <div class="row h-100 justify-content-center align-items-center">
                 <div class="col-5">  
+                       
                     <!-- Button group for login and register --> 
                 <div class="btn-group w-100" role="group" aria-label="Basic example">
                         <button type="button" class="btn btn-primary" id="login-btn">Login</button>
@@ -47,8 +48,18 @@
                         {{ register_form.repeat_password }}
                     </div>
                     <div class="form-group">
-                        {{ register_form.roll_no }}
+                        {{ register_form.student_id }}
                     </div>
+                    <div class="form-group">
+                            <div class="input-group mb-3">
+                            <div class="input-group">
+                                    <div class="input-group-prepend">
+                                {{ register_form.year }}
+                                        </div>
+                                {{ register_form.section }}
+                            </div>
+                            </div>
+                    </div>     
                     <div class="form-group">
                         <div class="input-group">
                             {{ register_form.gender }}&nbsp;&nbsp;
@@ -58,6 +69,16 @@
                     <button type="submit" class="btn btn-primary" name="register-form">Register</button>
                      </form>
                 <!-- End Regsiter form -->
+                {% if messages %}
+                    {% for message in messages %}
+                        {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+                            <p class="text-danger">{{ message }} <button type='button' class='close' onclick='$(this).parent().hide();'>×</button> </p> 
+                        {% endif %}
+                        {% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
+                            <p class="text-success">{{ message }} <button type='button' class='close' onclick='$(this).parent().hide();'>×</button> </p> 
+                        {% endif %}    
+                    {% endfor %}
+                {% endif %}
                 </div>
             </div>
         </div>
