added staff and more models

--- a/student_app/templates/student_app/dashboard.html
+++ b/student_app/templates/student_app/dashboard.html
@@ -4,6 +4,9 @@
     <title>PICT | Student Management System</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 {% include 'student_app/head.html' %}
+<link href="{% static 'student_app/css/navbar-fixed-left.min.css' %}" rel="stylesheet" />
+<link href="{% static 'student_app/css/docs.css' %}" rel="stylesheet" />
+<script src="{% static 'student_app/js/docs.js' %}"></script>
 </head>
 <body>
 		<nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
@@ -36,5 +39,11 @@
 					</ul>
 				</div>
 			</nav>
+		<div class="container-fluid">
+			<h1>
+				Some content
+			</h1>
+
+		</div>
 </body>
 </html>
