--- a/student_app/templates/student_app/index.html
+++ b/student_app/templates/student_app/index.html
@@ -3,12 +3,11 @@
     <title>PICT | Student Management System</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 {% include 'student_app/head.html' %}
-
 </head>
 <body>
         <div class="container h-100">
             <div class="row h-100 justify-content-center align-items-center">
-                <div class="col-5">  
+                <div class="col-sm-6 col-md-4">  
                        
                     <!-- Button group for login and register --> 
                 <div class="btn-group w-100" role="group" aria-label="Basic example">
