--- a/student_app/templates/student_app/dashboard.html
+++ b/student_app/templates/student_app/dashboard.html
@@ -5,40 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 {% include 'student_app/head.html' %}
 <link href="{% static 'student_app/css/navbar-fixed-left.min.css' %}" rel="stylesheet" />
-<link href="{% static 'student_app/css/docs.css' %}" rel="stylesheet" />
 <script src="{% static 'student_app/js/docs.js' %}"></script>
 </head>
 <body>
-		<nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
-				<a class="navbar-brand" href>{{ name }}</a>
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
-						aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-			
-				<div class="collapse navbar-collapse" id="navbarsExampleDefault">
-					<ul class="navbar-nav">
-						<li class="nav-item">
-							<a class="nav-link">Dashboard</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link">Profile</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link">Attendance</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link">Notice</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link">Events</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="{% url 'logout' %}">Logout</a>
-						</li>
-					</ul>
-				</div>
-			</nav>
+		{% include 'student_app/navbar.html' %}
 		<div class="container-fluid">
 			<h1>
 				Some content
