--- a/student_app/templates/student_app/navbar.html
+++ b/student_app/templates/student_app/navbar.html
@@ -14,7 +14,7 @@
                     <a class="nav-link" href="{% url 'profile' %}" >Profile</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">Attendance</a>
+                    <a class="nav-link" href="{% url 'student_attendance' %}">Attendance</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link">Notice</a>
