--- a/student_app/templates/staff/navbar.html
+++ b/student_app/templates/staff/navbar.html
@@ -28,9 +28,15 @@
                    
                     </li>
                 {% endif %}
-                <li class="nav-item">
-                    <a class="nav-link">Notice</a>
-                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Notice
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="{% url 'notice' action='add' %}">Add</a>
+                    <a class="dropdown-item" href="{% url 'notice' action='view' %}">View</a>
+                </div>
+                        </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                 </li>
