--- a/student_app/templates/staff/profile.html
+++ b/student_app/templates/staff/profile.html
@@ -16,7 +16,7 @@
                     <div class="card">
                             <div class="card-body">
                                 <div class="form-group">
-                                    <label> Student ID  </label>
+                                    <label> Staff ID  </label>
                                     <span class="form-control">{{ staff.staff_id }} </span>
                                 </div>
                                 <div class="form-group">
