--- a/student_app/templates/student_app/navbar.html
+++ b/student_app/templates/student_app/navbar.html
@@ -17,10 +17,7 @@
                     <a class="nav-link" href="{% url 'student_attendance' %}">Attendance</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">Notice</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link">Events</a>
+                    <a class="nav-link" href="{% url 'student_notice' %}">Notice {% if notice_count %} <span class="badge badge-light">{{ notice_count }}</span> {% endif %}</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'logout' %}">Logout</a>
