--- a/student_app/templates/staff/navbar.html
+++ b/student_app/templates/staff/navbar.html
@@ -27,7 +27,19 @@
                         {{ i.name }}
                    
                     </li>
-                {% endif %}
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Exam
+                      </a>
+                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            {% for i in classes %}
+                              <a class="dropdown-item" href="{% url 'exam' class_name=i.name %}">{{ i.name }}</a>
+                             {% endfor %}
+                      </div>
+                    
+                        {{ i.name }}
+                   
+                    </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Notice
@@ -35,8 +47,21 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="{% url 'notice' action='add' %}">Add</a>
                     <a class="dropdown-item" href="{% url 'notice' action='view' %}">View</a>
-                </div>
+                    </div>
                         </li>
+                        {% endif %}
+                        {% if librarian %}
+                                <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Books
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="{% url 'books' action='view' %}">View Books</a>
+                                <a class="dropdown-item" href="{% url 'books' action='add' %}">Add Books</a>
+                                <a class="dropdown-item" href="{% url 'books' action='add_record' %}">Add Record</a>
+                                </div>
+                                    </li>
+                        {% endif %}
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                 </li>
