--- a/student_app/templates/staff/view-books.html
+++ b/student_app/templates/staff/view-books.html
@@ -27,6 +27,7 @@
                           <tr>
                             <th scope="col" class="text-center">ISBN</th>
                             <th scope="col" class="text-center">Title</th>
+                            <th scope="col" class="text-center">Borrowed By</th>
                           </tr>
                         </thead>
                         <tbody class="">
@@ -34,7 +35,34 @@
                           <tr>
                             <td class="text-center">{{ book.isbn }}</td>
                             <td class="text-center">{{ book.name }}</td>
+                            <td class="text-center"><span class="badge badge-dark">{{ book.borrowrecord_set.all.count }} </span>
+                                <button type="button" class="btn btn-sm btn-outline-dark" data-toggle="modal" data-target="#isbn{{ book.isbn }}">
+                                    View
+                                  </button>
+                            </td>
                           </tr>
+                          <div class="modal fade" id="isbn{{ book.isbn }}" tabindex="-1" role="dialog" aria-hidden="true">
+                              <div class="modal-dialog modal-dialog-scrollable" role="document">
+                                <div class="modal-content">
+                                  <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalScrollableTitle">{{ book.name }} : Borrowed By</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                      <span aria-hidden="true">&times;</span>
+                                    </button>
+                                  </div>
+                                  <div class="modal-body">
+                                    {% for b in book.borrowrecord_set.all %}
+                                   <span class="text-muted"> {{ b.student.student_id }}</span>
+                                   <span class="text-dark">{{ b.student }}</span>
+                                   <span class="text-info"> {{ b.borrow_time }}</span>
+                                    {% endfor %}
+                                  </div>
+                                  <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
                           {% endfor %}
                         </tbody>
                 </table>
