--- a/student_app/templates/student_app/navbar.html
+++ b/student_app/templates/student_app/navbar.html
@@ -23,6 +23,9 @@
                     <a class="nav-link" href="{% url 'student_notice' %}">Notice {% if notice_count %} <span class="badge badge-light">{{ notice_count }}</span> {% endif %}</a>
                 </li>
                 <li class="nav-item">
+                        <a class="nav-link" href="{% url 'books' action='view' %}">Books</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                 </li>
             </ul>
