--- a/student_app/templates/student_app/profile.html
+++ b/student_app/templates/student_app/profile.html
@@ -15,20 +15,24 @@
             <div class="card">
                     <div class="card-body">
                         <div class="form-group">
-                            <label> Student ID  </label>
-                            <span class="form-control">{{ student.student_id }} </span>
+                            <label> Student ID </label>
+                            <input class="form-control" readonly value="{{ student.student_id }} ">
                         </div>
                         <div class="form-group">
-                                <label> Name </label>
-                                <span class="form-control"> {{ student.first_name }} {{ student.last_name }}</span>
+                                <div class="input-group">
+                                <input type="text" name="first_name" class="form-control" placeholder="First Name" value="{{ student.first_name }}">&nbsp;&nbsp;
+                                <input type="text" name="last_name" class="form-control" placeholder="Last Name" value="{{ student.last_name }}">
+                                </div>
                             </div>
                         <div class="form-group">
-                            <label> Email </label>
-                            <span class="form-control"> {{ student.email }}</span>
+                            <input type="email" name="email" class="form-control" placeholder="Email" value="{{ student.email }}">
                         </div>
                         <div class="form-group">          
                             <label> Join date </label>
-                            <span class="form-control"> {{ student.register_time }}</span>
+                            <input class="form-control" value="{{ student.register_time }}" readonly>
+                        </div>
+                        <div class="form-group">
+                            <button class="btn btn-outline-dark" name="update">Update</button>
                         </div>
                 </div>
                 </div>
