Fixed exam, updated profile

--- a/student_app/templates/staff/exam.html
+++ b/student_app/templates/staff/exam.html
@@ -39,7 +39,7 @@
                                 <td>{{ student.last_name }}</td>
                                 <td><input type="hidden" value="{{ student.student_id }}" name="student_list[]">
                                     <div class="input-group">
-                                         <input type="text" class="form-control" name="mark_list[]">
+                                         <input type="number" class="form-control" name="mark_list[]">
                                         <div class="input-group-append">
                                         <span class="input-group-text">/30</span>
                                         </div>
