--- a/student_app/templates/student_app/profile.html
+++ b/student_app/templates/student_app/profile.html
@@ -12,10 +12,12 @@
 		<div class="container-fluid">
         <div class="row h-100 justify-content-center align-items-center">
         <div class="col-md-5 col-sm-6">
+                <h2 class="text-center">Profile</h2>
             <div class="card">
                     <div class="card-body">
+                        <form method="POST" action="{% url 'update' %}">
+                            {% csrf_token %}
                         <div class="form-group">
-                            <label> Student ID </label>
                             <input class="form-control" readonly value="{{ student.student_id }} ">
                         </div>
                         <div class="form-group">
@@ -28,12 +30,12 @@
                             <input type="email" name="email" class="form-control" placeholder="Email" value="{{ student.email }}">
                         </div>
                         <div class="form-group">          
-                            <label> Join date </label>
                             <input class="form-control" value="{{ student.register_time }}" readonly>
                         </div>
                         <div class="form-group">
                             <button class="btn btn-outline-dark" name="update">Update</button>
                         </div>
+                        </form> 
                 </div>
                 </div>
             </div>
