--- a/student_app/templates/staff/profile.html
+++ b/student_app/templates/staff/profile.html
@@ -7,9 +7,11 @@
 <link href="{% static 'student_app/css/navbar-fixed-left.min.css' %}" rel="stylesheet" />
 <link href="{% static 'student_app/css/docs.css' %}" rel="stylesheet" />
 <script src="{% static 'student_app/js/docs.js' %}"></script>
+<link rel="stylesheet" href="{% static 'student_app/css/style.css' %}">
 </head>
 <body>
-		{% include 'staff/navbar.html' %}
+        {% include 'staff/navbar.html' %}
+        
 		<div class="container-fluid">
                 <div class="row h-100 justify-content-center align-items-center">
                 <div class="col-md-5 col-sm-6">
