--- a/student_app/templates/staff/add-book.html
+++ b/student_app/templates/staff/add-book.html
@@ -7,8 +7,7 @@
 <link href="{% static 'student_app/css/navbar-fixed-left.min.css' %}" rel="stylesheet" />
 <link href="{% static 'student_app/css/docs.css' %}" rel="stylesheet" />
 <script src="{% static 'student_app/js/docs.js' %}"></script>
-<style>
-</style>
+<link rel="stylesheet" href="{% static 'student_app/css/style.css' %}">
 </head>
 <body>
 		{% include 'staff/navbar.html' %}
@@ -25,7 +24,7 @@
         <form id="student-attendance" method="POST" action="{% url 'books' action='add' %}">
           {% csrf_token %}
 		  	<div class="form-group">
-				<input type="text" name="book_name" class="form-control" placeholder="Book Name" maxlength="50">
+				<input type="text" name="book_name" class="form-control" placeholder="Book Name" maxlength="100">
             </div>
             <div class="form-group">
                     <input type="text" name="isbn" class="form-control" placeholder="ISBN" maxlength="50">
