--- a/student_app/templates/student_app/profile.html
+++ b/student_app/templates/student_app/profile.html
@@ -6,6 +6,7 @@
 {% include 'student_app/head.html' %}
 <link href="{% static 'student_app/css/navbar-fixed-left.min.css' %}" rel="stylesheet" />
 <script src="{% static 'student_app/js/docs.js' %}"></script>
+<link rel="stylesheet" href="{% static 'student_app/css/style.css' %}">
 </head>
 <body>
 		{% include 'student_app/navbar.html' %}
