--- a/student_app/templates/student_app/results.html
+++ b/student_app/templates/student_app/results.html
@@ -6,10 +6,14 @@
 {% include 'student_app/head.html' %}
 <link href="{% static 'student_app/css/navbar-fixed-left.min.css' %}" rel="stylesheet" />
 <script src="{% static 'student_app/js/docs.js' %}"></script>
+<link rel="stylesheet" href="{% static 'student_app/css/style.css' %}">
 </head>
 <body>
 		{% include 'student_app/navbar.html' %}
 		<div class="container-fluid">
+			{% if not unit1 and not unit2 %}
+				<h2>Results not published yet!</h2>
+			{% endif %}
 			<div class="row justify-content-center align-items-center">
 			<div class="col-md-6 col-sm-8">
 				{% if unit1 %}
