--- a/student_app/templates/student_app/attendance.html
+++ b/student_app/templates/student_app/attendance.html
@@ -35,7 +35,7 @@
 							  <td></td>
 							  <td></td>
 							  <td></td>
-							  <td><b>Average {{ avg_attendance }}%</b></td>
+							  <td><b>Average {{ avg_attendance }} {% if avg_attendance != 'N/A' %} % {% endif %}</b></td>
 						  </tr>
 						</tbody>
 					  </table>
