--- a/student_app/templates/staff/add-book.html
+++ b/student_app/templates/staff/add-book.html
@@ -21,6 +21,7 @@
 	  {% endif %}
 	  	<div class="row h-100 justify-content-center align-items-center">
 		<div class="col-md-4 col-sm-6">
+				<h3 class="text-center text-muted">Add Book</h3>
         <form id="student-attendance" method="POST" action="{% url 'books' action='add' %}">
           {% csrf_token %}
 		  	<div class="form-group">
@@ -30,7 +31,7 @@
                     <input type="text" name="isbn" class="form-control" placeholder="ISBN" maxlength="50">
             </div>
 			<div class="form-group">
-					<button class="btn btn-outline-primary" name="lend">Add Book</button>
+					<button class="btn btn-outline-primary" name="lend">Add</button>
 			</div>
 		 </form>    
 		</div>   
