--- a/student_app/templates/staff/delete-record.html
+++ b/student_app/templates/staff/delete-record.html
@@ -28,6 +28,7 @@
 	  {% endif %}
 	  	<div class="row h-100 justify-content-center align-items-center">
 		<div class="col-md-4 col-sm-6">
+      <h3 class="text-center text-muted">Search Record</h3>
             <form method="POST" action="{% url 'books' action='delete_record' %}">
                 {% csrf_token %}
                 <div class="form-group">
