--- a/student_app/templates/student_app/books.html
+++ b/student_app/templates/student_app/books.html
@@ -26,6 +26,7 @@
     
 	  	<div class="row justify-content-center align-items-center">
                 <div class="col-md-8 col-sm-10">
+                    <h3 class="text-center text-muted">Borrowed Books</h3>
 		<table class="table table-hover table-striped">
                         <thead class="thead-dark">
                           <tr>
