--- a/student_app/templates/staff/attendance.html
+++ b/student_app/templates/staff/attendance.html
@@ -34,7 +34,7 @@
             <tbody class="">
                 {% for student in students %}
                 <tr>
-                  <th scope="row">{{ student.student_id }}</th>
+                  <th scope="row"><a href="{% url 'details' student_id=student.student_id %}" target="_blank">{{ student.student_id }}</a></th>
                   <td>{{ student.first_name }}</td>
                   <td>{{ student.last_name }}</td>
                   <td><input class="form-check-input" type="checkbox" value="{{ student.student_id }}" name="student_list[]"></td>
