--- a/student_app/templates/student_app/index.html
+++ b/student_app/templates/student_app/index.html
@@ -63,6 +63,9 @@
                     {{ register_form.student_id }}
                 </div>
                 <div class="form-group">
+                        {{ register_form.mobile_no }}
+                </div>
+                <div class="form-group">
                     <div class="input-group mb-3">
                         <div class="input-group">
                         <div class="input-group-prepend">
