--- a/student_app/templates/student_app/profile.html
+++ b/student_app/templates/student_app/profile.html
@@ -11,6 +11,13 @@
 <body>
     {% include 'student_app/navbar.html' %}
     <div class="container-fluid">
+        {% if messages %}
+        {% for message in messages %}
+        <div class="alert alert-success" role="alert">
+          {{ message }}
+        </div>
+        {% endfor %}
+        {% endif %}
         <div class="row h-100 justify-content-center align-items-center">
             <div class="col-md-5 col-sm-6">
             <h2 class="text-center">Profile</h2>
@@ -29,6 +36,9 @@
                         </div>
                         <div class="form-group">
                         <input type="email" name="email" class="form-control" placeholder="Email" value="{{ student.email }}">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" name="mobile_no" class="form-control" placeholder="Mobile No" minlength="10" maxlength="10" value="{{ student.mobile_no }}">
                         </div>
                         <div class="form-group">          
                         <input class="form-control" value="{{ student.register_time }}" readonly>
